Fix spacing throught form and move all TO form related styling to task order stylesheet

--- a/styles/elements/_icons.scss
+++ b/styles/elements/_icons.scss
@@ -55,11 +55,19 @@
     @include icon-size(24);
   }
 
-  &.icon--remove, &.icon--error {
+  &.icon--remove, &.icon--red {
     @include icon-color($color-red);
   }
 
-  &.icon--ok {
-    @include icon-color($color-green)
+  &.icon--green {
+    @include icon-color($color-green);
+  }
+
+  &.icon--gray {
+    @include icon-color($color-gray);
+  }
+
+  &.icon--medium {
+    @include icon-size(12);
   }
 }
