--- a/styles/elements/_tables.scss
+++ b/styles/elements/_tables.scss
@@ -76,14 +76,6 @@
     &:last-child {
       margin-bottom: 0;
     }
-
-    &.funding-summary {
-      tr td {
-        margin: 0;
-        padding: 0;
-        border-bottom: 0;
-      }
-    }
   }
 }
 
